selection color change

--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -6,6 +6,25 @@
 <meta charset="utf-8">
 <title>meower - downloads</title>
 	<style>
+		::-moz-selection {
+  color: white;
+  background: orange;
+}
+		
+		::-webkit-selection {
+  color: white;
+  background: orange;
+}		
+		
+		::-o-selection {
+  color: white;
+  background: orange;
+}		
+
+::selection {
+	color: white;
+  background: orange;
+}
 		@font-face {
             font-family: simvoni;
             src: url(https://meower.org/fonts/new-meower-fonts/SimvoniBold.ttf) format("truetype")
