--- a/b6/legal.html
+++ b/b6/legal.html
@@ -6,6 +6,25 @@
 <title>meower - legal</title>
 	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 	<style>
+		::-moz-selection {
+  color: white;
+  background: orange;
+}
+		
+		::-webkit-selection {
+  color: white;
+  background: orange;
+}		
+		
+		::-o-selection {
+  color: white;
+  background: orange;
+}		
+
+::selection {
+	color: white;
+  background: orange;
+}
 		@font-face {
             font-family: simvoni;
             src: url(https://meower.org/fonts/new-meower-fonts/SimvoniBold.ttf) format("truetype")
