--- a/b6/404.html
+++ b/b6/404.html
@@ -6,6 +6,28 @@
 <title>meower - 404</title>
 	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 	<style>
+		.fade-in-animation {
+			animation: fadeIn: 1s;
+			-webkit-animation: fadeIn 1s;
+			-moz-animation: fadeIn 1s;
+			-o-animation: fadeIn 1s;
+		}
+		@keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-webkit-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-moz-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-o-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
 		::-moz-selection {
   color: white;
   background: orange;
@@ -157,11 +179,11 @@ filter: brightness(0%);
 
 		
 </header>
-<div class="container">
+	<div class="fade-in-animation"><div class="container">
 <h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</span></h2>
 <h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>
-- Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4>
-<a href=https://github.com/meower-media-co/></a>
+- Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4></div>
+		</div></div>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
