--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -20,6 +20,28 @@
   color: white;
   background: orange;
 }		
+		.fade-in-animation {
+			animation: fadeIn: 1s;
+			-webkit-animation: fadeIn 1s;
+			-moz-animation: fadeIn 1s;
+			-o-animation: fadeIn 1s;
+		}
+		@keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-webkit-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-moz-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-o-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
 
 ::selection {
 	color: white;
@@ -150,14 +172,14 @@ filter: brightness(0%);
 	
 
 		
-</header><div class="container">
+	</header><div class="fade-in-animation"><div class="container">
 <h1>Download&nbsp; &nbsp; <br><span style="color: #F9A637">Meower Desktop</span><h5><em>Last updated on Apri 20, 6969</em></h5>
 </a> <button class="button2"><h2 style="float:left;">v0.6.9&nbsp;</h2> <img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/releaseimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
 		</button><br><br><button class="button2"><h2 style="float:left;">v0.4.21&nbsp;</h2> 
 		<img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/betaimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
 		</button><br><br><button class="button2"><h2 style="float:left;">v0.4.20&nbsp;</h2> <img height="20" style="float: left; margin-top: 16px;" src="https://meower.org/assets/releaseimage.png"><img height="40" style="float: right; margin-top: 7px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/github.png"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 23px;" src="https://meower.org/assets/linux.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/macos.svg"><img height="32" style="float: right; margin-top: 9px; margin-right: -10px; margin-left: 20px;" src="https://meower.org/assets/windows.svg">
-		</button><br><h5><em>You've reached the end of the list...</em></h5>
+	</button><br><h5><em>You've reached the end of the list...</em></h5></div></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
 </body>
 </html>
