--- a/b6/legal.html
+++ b/b6/legal.html
@@ -6,6 +6,28 @@
 <title>meower - legal</title>
 	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 	<style>
+		.fade-in-animation {
+			animation: fadeIn: 1s;
+			-webkit-animation: fadeIn 1s;
+			-moz-animation: fadeIn 1s;
+			-o-animation: fadeIn 1s;
+		}
+		@keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-webkit-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-moz-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
+		@-o-keyframes fadeIn {
+			0% {opacity: 0;}
+			100% {opacity: 1;}
+		}
 		::-moz-selection {
   color: white;
   background: orange;
@@ -146,7 +168,7 @@ filter: brightness(0%);
 	
 
 		
-</header><div class="container">
+	</header><div class="fade-in-animation"><div class="container">
 <h1>Meower&nbsp; &nbsp; <br><span style="color: #F9A637">Terms of Use/Privacy Policy&nbsp; &nbsp;</span>
 <h5><em>Last Revised: 1/7/2022</em></h5>
 </a> <button class="button2"><h2 style="float:left;"><h2 style="color:#F9A637;">Meower Terms of Use and Privacy Policy</h2>
@@ -240,8 +262,8 @@ filter: brightness(0%);
 <br>f. We are not responsible for the selling of any Meower-related item, you may buy or sell these items at your own risk.
  <br>g. We are not responsible if you have been defrauded by any person or website claiming to have any paid item or information relating to Meower.</p>
 <p></p></h2>
-		</button><br><br><br><br>
+	</button><br><br><br><br></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
 </body>
 </html>
