--- a/b6/legal.html
+++ b/b6/legal.html
@@ -262,7 +262,7 @@ filter: brightness(0%);
 <br>f. We are not responsible for the selling of any Meower-related item, you may buy or sell these items at your own risk.
  <br>g. We are not responsible if you have been defrauded by any person or website claiming to have any paid item or information relating to Meower.</p>
 <p></p></h2>
-	</button><br><br><br><br></div>
+	</button><br><br><br><br></div></div>
 	
 <div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
 </body>
