--- a/b6/index.html
+++ b/b6/index.html
@@ -6,6 +6,9 @@
 <meta charset="utf-8">
 <title>meower</title>
 	<style>
+		.large {
+			font-size-adjust: auto
+		}
 		::-moz-selection {
   color: white;
   background: orange;
@@ -193,7 +196,8 @@ nav a:hover {
 		
 </header>
 <center><div class="fade-in-animation"><h5>THE MEOWER PROJECT</h5>
-		<h1>A <span style="color: #F9A637">state-of-the-art</span> social <br>media platform for everyone</h1>
+		<h1>A <span style="color: #F9A637">state-of-the-art</span> social <br>
+	    media platform for everyone.</h1>
   <a href="https://app.meower.org"><button class="button1"><h2>Launch Meower</h2></button></a> <a href=https://github.com/meower-media-co/><button class="button2"><h2>Learn More&nbsp;</h2>
 		</button></a></div>
 	</center>
