--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -8,17 +8,17 @@
 	<style>
 		::-moz-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }
 		
 		::-webkit-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }		
 		
 		::-o-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }		
 		.fade-in-animation {
 			animation: fadeIn: 0.7s;
@@ -45,7 +45,7 @@
 
 ::selection {
 	color: white;
-  background: orange;
+  background: #F9A637;
 }
 		@font-face {
             font-family: simvoni;
