--- a/b6/404.html
+++ b/b6/404.html
@@ -30,22 +30,22 @@
 		}
 		::-moz-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }
 		
 		::-webkit-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }		
 		
 		::-o-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }		
 
 ::selection {
 	color: white;
-  background: orange;
+  background: #F9A637;
 }
 		@font-face {
             font-family: simvoni;
