--- a/b6/index.html
+++ b/b6/index.html
@@ -11,22 +11,22 @@
 		}
 		::-moz-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }
 		
 		::-webkit-selection {
   color: white;
-  background: orange;
+  background: #F9A637;
 }		
 		
-		::-moz-selection {
+		::-o-selection {
   color: white;
-  background: orange;
+  background: o#F9A637;
 }		
 
 ::selection {
 	color: white;
-  background: orange;
+  background: #F9A637;
 }
 		@font-face {
             font-family: simvoni;
