--- a/b6/downloads.html
+++ b/b6/downloads.html
@@ -114,6 +114,16 @@ nav a:hover {
 		font-size: 32; 	
 		color: #fff;
 	    margin-right: 15px;
+						-webkit-transition:  -webkit-transform .2s ease-out;
+		-moz-transition:  -moz-transform .2s ease-out;
+		-o-transition:  -o-transform .2s ease-out;		
+		transition: transform .2s ease-out;		
+		}
+		.button2:hover {
+		-webkit-transform:scale(1.02);
+		-moz-transform:scale(1.02);
+		-o-transform:scale(1.02);	
+		transform:scale(1.02);	
 		}
 		.button2 {	
 		width: 120%;	
@@ -123,7 +133,10 @@ nav a:hover {
 		border: none;
 		font-family: simvoni;; 	
 		color: #000;
-		m	
+		-webkit-transition:  -webkit-transform .2s ease-out;
+		-moz-transition:  -moz-transform .2s ease-out;
+		-o-transition:  -o-transform .2s ease-out;		
+		transition: transform .2s ease-out;		
 		}
 			.img1 {
 	  
