--- a/b6/index(textlarger).html
+++ b/b6/index(textlarger).html
@@ -7,7 +7,7 @@
 <title>meower</title>
 	<style>
 		.large {
-			font-size: 30px;
+			font-size: 20px;
 		}
 		::-moz-selection {
   color: white;
@@ -108,10 +108,10 @@ nav a:hover {
 		.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 0px 40px;
+		padding: 0px 24px;
 		border: none;
 		font-family: simvoni;
-		font-size: 20px; 	
+		font-size: 32; 	
 		color: #fff;
 	    margin-right: 15px;
 		cursor: pointer;
@@ -120,15 +120,14 @@ nav a:hover {
 		-moz-transition:  -moz-transform .2s ease-out;
 		-o-transition:  -o-transform .2s ease-out;		
 		transition: transform .2s ease-out;
-		
 		}
 		.button2 {
 		border-radius: 14px;
 		background-color: #E8F3FD;
-		padding: 0px 70px;
+		padding: 0px 34px;
 		border: none;
 		font-family: simvoni;
-		font-size: 20px; 	
+		font-size: 32; 	
 		color: #000;
 		cursor: pointer;
 		transtiton-duration: 4s;
