--- a/b6/index.html
+++ b/b6/index.html
@@ -6,8 +6,8 @@
 <meta charset="utf-8">
 <title>meower</title>
 	<style>
-		.large {
-			font-size-adjust: auto
+.large {
+			font-size: 20px;
 		}
 		::-moz-selection {
   color: white;
@@ -194,7 +194,7 @@ nav a:hover {
 	
 
 		
-</header>
+</header><div class="large">
 <center><div class="fade-in-animation"><h5>THE MEOWER PROJECT</h5>
 		<h1>A <span style="color: #F9A637">state-of-the-art</span> social <br>
 	    media platform for everyone.</h1>
