added news, changed legal container

--- a/b6/legal.html
+++ b/b6/legal.html
@@ -109,8 +109,8 @@ nav a:hover {
 		color: #fff;
 	    margin-right: 15px;
 		}
-		.button2 {	
-		width: 120%;	
+		legalcontainer {	
+		width: 117%;	
 		border-radius: 14px;
 		background-color: #E8F3FD;
 		padding: 0px 20px;
@@ -171,7 +171,7 @@ filter: brightness(0%);
 	</header><div class="fade-in-animation"><div class="container">
 <h1>Meower&nbsp; &nbsp; <br><span style="color: #F9A637">Terms of Use/Privacy Policy&nbsp; &nbsp;</span>
 <h5><em>Last Revised: 1/7/2022</em></h5>
-</a> <button class="button2"><h2 style="float:left;"><h2 style="color:#F9A637;">Meower Terms of Use and Privacy Policy</h2>
+</a> <legalcontainer><h2 style="float:left;"><h2 style="color:#F9A637;">Meower Terms of Use and Privacy Policy</h2>
 <h3 style="color:#F9A637;">Important Notice</h3>
 <p>Please note that this document isn't written by professional lawyers and may contain errors. Hereafter, “we”/“our”/“us” refers to Meower Media Co, and “you” refers to a user of Meower. We aren't lawyers and we don't have lawyers. Everything you see here is all-encompassing.</p>
 <br>
