--- a/b6/webbeta.html
+++ b/b6/webbeta.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>meower - news</title>
+<title>meower - 404</title>
 	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
 	<style>
 		.fade-in-animation {
@@ -55,8 +55,7 @@
 	width: 80%;
 	margin-left: 30px;
 	margin-right: 30px;
-	margin-top: 60px;
-	margin-bottom: 60px;		
+	margin-top: 60px;		
 			
 }
 		header {
@@ -97,7 +96,14 @@ nav a:hover {
 	right: 0;		
 		
 			}
-		
+		center {
+			  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+ right: 15%;			
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 		}
 		.button1 {
 		border-radius: 14px;
@@ -109,32 +115,15 @@ nav a:hover {
 		color: #fff;
 	    margin-right: 15px;
 		}
-		newscontainer {	
-		width: 117%;	
+		.button2 {	
+		width: 120%;	
 		border-radius: 14px;
 		background-color: #E8F3FD;
 		padding: 0px 20px;
 		border: none;
 		font-family: simvoni;; 	
 		color: #000;
-		float: left;
-		text-align: left;
-		font-size: 20px;	
-		}
-		postcontainer {	
-		width: 97%;	
-		border-radius: 14px;
-		background-color: #fff;
-		padding: 0px 20px;
-		border: none;
-		font-family: simvoni;; 	
-		color: #000;
-		float: left;
-		text-align: left;
-		font-size: 20px;
-		margin-top: 20px;
-		margin-bottom: 20px;	
-		margin-bottom: 20px;	
+		m	
 		}
 			.img1 {
 	  
@@ -164,6 +153,12 @@ filter: brightness(0%);
 		font-size: 14px;	
 		font-weight: 100;	
 		}
+		h4 {
+	 	font-family: simvoni;
+		color:gray;
+		font-size: 18px;	
+		font-weight: 100;	
+		}
 	</style>
 	
 </head>
@@ -174,7 +169,7 @@ filter: brightness(0%);
 			<ul style="float: right;">
 		<li ><nav><a href="https://app.meower.org">launch</a></nav></li>
 		<li ><nav> <a href="https://svelte.meower.org">svelte</a></nav></li>		
-		<li ><nav> <a href="https://meower.org/downloads">downloads</nav></li>
+		<li ><nav> <a href="https://meower.org/downloads">downloads</a></nav></li>
 		<li ><nav> <a href="https://meower.org/legal/">legal</a></nav></li>
 		<li ><nav> <a href="https://wiki.meower.org">wiki</a></nav></li>
 				
@@ -183,19 +178,13 @@ filter: brightness(0%);
 	
 
 		
-	</header><div class="fade-in-animation"><div class="container">
-<h1>Meower&nbsp; &nbsp; <br><span style="color: #F9A637">News&nbsp;</span>
-<h5><em>Last Updated: 8/6/2022</em></h5>
-</a> <newscontainer><postcontainer style="margin-bottom: -10px;"><h2 style="float:left;"><h2 style="color:#F9A637;">News Post</h2>
-	<h3 style="color:#F9A637;">By MikeDEV</h3><p style="font-weight: 100; color: #676767; font-size: 15px;"><em>August 8, 2022</em></p>
-<p>news&nbsp; &nbsp; &nbsp;</p>
-</p></h2>
-	</postcontainer><postcontainer><h2 style="float:left;"><h2 style="color:#F9A637;">New Website</h2>
-	<h3 style="color:#F9A637;">By MikeDEV</h3><p style="font-weight: 100; color: #676767; font-size: 15px;"><em>August 8, 2022</em></p>
-<p>Welcome to the new website design! We now have news, so you can stay up to date with meower, and a downloads page for Meower Desktop. Mobile versions of this site and more news will be coming soon, so stay tuned!&nbsp; &nbsp; &nbsp;</p>
-</p></h2>
-	</postcontainer></newscontainer><br><br><br><br></div></div>
+</header>
+	<div class="fade-in-animation"><div class="container">
+<h1>404&nbsp; &nbsp; <h2><span style="color: #F9A637">The page you are looking for cannot be found...&nbsp; &nbsp;&nbsp;</span></h2>
+<h4><em>You could have:<br><br> - Typed the URL wrong <br>- Clicked on a link that no longer exists <br>
+- Made Meowy cry and now he's mad<br><br>The one thing we know for sure is you can click the Meower logo to return home</em></h4></div>
+		</div></div>
 	
-<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div></div>
+<div class="stack-bottom"><div class="meowy_bg"><img height="700" src="https://meower.org/assets/cloudycircle.png"></div></div>
 </body>
 </html>
