--- a/b6/profile.html
+++ b/b6/profile.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <title>meower - legal</title>
-	<link rel="shortcut icon" href="https://meower.org/assets/77336943.png" type="image/x-icon">
+	<link rel="shortcut icon" href="https:/assets.meower.org/pfp/21.png" type="image/x-icon">
 	<style>
 		.fade-in-animation {
 			animation: fadeIn: 0.7s;
@@ -104,7 +104,7 @@ font-family: simvoni;
 			}
 		
 		}
-		.button {
+		button {
 		border-radius: 14px;
 		background-color: #F9A637;
 		width: 110%;
