--- a/misc/emailtemplates/emailtemplate.html
+++ b/misc/emailtemplates/emailtemplate.html
@@ -18,6 +18,17 @@
 		font-size: 20px;
 		text-align: left 
 	}
+	.message-container {
+		width: 560px;	
+		border-radius: 14px;
+		background-color: #fff;
+		padding: 20px 20px;
+		border: none;
+		font-family: simvoni; 	
+		color: #000;
+		font-size: 20px;
+		text-align: left 
+	}
 	h2 {
 		padding-left: 10px;
 		padding-top: 20px;	
@@ -30,20 +41,48 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
+	button1 {
+		border-radius: 14px;
+		background-color: #F9A637;
+		padding: 10px 50px 10px 50px;
+		border: none;
+		font-family: simvoni;
+		font-size: 20px; 	
+		color: #fff;
+	    margin-right: 15px;
+		cursor: pointer;
+	}
+	button2 {
+		border-radius: 14px;
+		background-color: #fff;
+		padding: 10px 50px 10px 50px;
+		border: none;
+		font-family: simvoni;
+		font-size: 20px; 	
+		color: #0;
+	    margin-right: 15px;
+		cursor: pointer;
+	}
 	</style>
 </head>
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Header</h2>
-    <p>Dear [user],<br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br>
+	<h2>Header&nbsp;</h2>
+    <p> Body text&nbsp;
+    <div class="message-container"> This is a message container
+</div><br>
+	<br>
+
+<button1>button1</button1><button2>button2</button2><br>
+<br><br>
+
+<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br>
+button1: https://meower.org/...<br>
+button2: https://meower.org/...</em></span><br>
 <br>
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <br>
-<br>
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br>
-<br>
+
 - Meower Media Co.</p>
     </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
 <br>
