--- a/misc/email/IPban.html
+++ b/misc/email/IPban.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 20px 10px 20px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,33 +57,25 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Your account has been suspended.&nbsp;</h2>
-    <p>Dear [user],<br><br>
-      The Meower moderator team has decided to temporarily suspend your account for [number] days, as they have found your account in violation of Meower's Terms of Service.<br>
+	<h2>IP Ban Notice</h2>
+    <p>Dear [user],<br> 
       <br>
-      Your account has been suspended for the following reason:<br>
-      <br>
-      [reason]&nbsp; &nbsp; &nbsp;&nbsp;<br>
+The Meower moderator team has decided to permantly terminate your IP Address as they have found the accounts under this IP in violation of Meower's Terms of Service. <br>
 <br>
-Until your suspension is over, you will no longer be able to log into Meower.<br>
+Your IP has been terminated for the following reason: <br>
 <br>
-The following services may be revoked during your suspension and/or after your suspension :<br>
-&nbsp;- Using first and third-party OAuth applications<br>
-&nbsp;- Using websites and apps that are partnered with Meower<br>
-&nbsp;- Creating new accounts on Meower&nbsp; <br>
-&nbsp;- Participating in Meower Communites, such as the Meower Discord server.<br>
+[reason] <br>
 <br>
-Please note that attempts to circumvent this may result in an immediate longer suspension, account termination, or an IP ban.<br>
+You will no longer be able to view Meower. <br>
 <br>
-If you believe this was in error, please file an appeal using the button below.<br>
-&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <br>
+The following services have been revoked :<br>
+- Using first and third-party OAuth applications<br>
+- Using websites and apps that are partnered with Meower<br>
+- Creating new accounts on Meower<br>
+- Participating in Meower Communites, such as the Meower Discord server. <br>
 <br>
-<button1>Appeal&nbsp;</button1> <br>
-<br><br>
+Please note that attempts to circumvent this will result in more IP bans.&nbsp;&nbsp; <br>
 
-<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
-<br>
-Appeal: https://meower.org/...<br></em></span><br>
 <br>
 
 - Meower Media Co.</p>
