--- a/misc/email/accountdeletion.html
+++ b/misc/email/accountdeletion.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,7 +41,7 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
 		padding: 10px 40px 10px 40px;
@@ -57,19 +57,24 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Account Link Success!</h2>
+	<h2>Account Deletion Notice</h2>
     <p>Dear [user],<br><br>
-      Your account has been successfully linked to [adult]!<br>
+      Your account was requested for deletion from IP [127.0.0.1]<br>
+      
       <br>
-      Welcome to the wonderful world of Meower!<br>
+      Your account will be terminated in <strong>2 days</strong>. After that, your account will be <strong>lost foreve</strong><strong>r.</strong><br>
+<br>
+If this was you, you can ignore this email.&nbsp; <br>
+      <br>
+      If this is not you, please request account recovery immediately.&nbsp;&nbsp;<br>
 <br>
 <br>
-		<button1>Let's go!</button1><br>
+		<button class="button1">Account Recovery</button><br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Let's go!: https://meower.org/...</em></span><br>
+Account Recovery: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
