--- a/misc/email/accountlinksuccessadult.html
+++ b/misc/email/accountlinksuccessadult.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 20px 10px 20px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,19 +57,25 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Welcome to Meower!&nbsp;</h2>
+	<h2>Account Link Success!</h2>
     <p>Dear [user],<br><br>
-      Your email has been verified and your account is ready to go!<br>
+      Your account has been successfully linked to [child]!<br>
       <br>
-      Have fun the wonderful world of Meower!<br>
-      &nbsp; &nbsp; <br>
+      Your child can now experience the wonderful world of Meower!<br>
+      <br>
+      Your child's parental control settings are currently set at <br>
 <br>
-<button1>Let's go!</button1> <br>
+<strong>Recommended Settings<br>
+<br>
+</strong>If you want, you can customize and control parental controls to your liking. You can change what your child can see, access, as well as set custom profanity filters and age settings.&nbsp;&nbsp;<br>
+<br>
+<br>
+		<button class="button1">Parental Control Settings</button><br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Let's go!: https://meower.org/...</em></span><br>
+Parental Control Settings: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
