--- a/misc/email/adultaccountlink.html
+++ b/misc/email/adultaccountlink.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 20px 10px 20px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,19 +57,22 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Meower Announcement Title&nbsp;</h2>
-    <p> Announcement Content<br><br>
-
-<span style="font-size: 15px;"><em>To unsubscribe from announcments like this, use the button below.</em></span>
+	<h2>Account Link Notice&nbsp;</h2>
+    <p>Dear [user],<br><br>
+      All Child Meower accounts have to be linked to an Adult account.<br>
+      <br>
+      During setup, you have decided to skip the account link.&nbsp;&nbsp;      <br>
+      <br>
+      If the account "[user]" is not linked to an Adult account within the next 30 days, the account will have to be terminated as per COPPA law.&nbsp; &nbsp;<br>
+&nbsp;&nbsp;
+      &nbsp; &nbsp; <br>
 <br>
-<br>
-<br>
-<button2>Unsubscribe</button2><br>
+<button class="button1">Link Now</button> <br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Unsubscribe: https://meower.org/...</em></span><br>
+Link Now: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
