--- a/misc/email/alert.html
+++ b/misc/email/alert.html
@@ -22,7 +22,7 @@
 		width: 560px;	
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 0px 20px;
+		padding: 20px 20px;
 		border: none;
 		font-family: simvoni; 	
 		color: #000;
@@ -41,7 +41,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -52,7 +52,7 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
 		padding: 10px 40px 10px 40px;
@@ -68,23 +68,15 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Messages&nbsp;</h2>
-    <p> You have [number] unread messages on your Meower account!<br>
+	<h2>Alert</h2>
+    <p>Dear [user],<br><br>
+      Your account has received an alert from the Meower Moderation Team.<br>
+      <br>
+      The alert reads as follows:<div class="message-container">
+Alert sent on: MM/DD/YYYY<br>
 <br>
-Messages like:
-<div class="message-container"><img style="margin-right: 20px;" src="https://assets.meower.org/PFP/21.png"><h2 style="margin-top: -130px; margin-left: 100px;">user<br>
-<span style="font-size: 18px; color: #989898; font-weight: 100;">MM/DD/YYYY</span></h2><br><br> <p style="margin-top: -25px;">message-body</p>
+[alert]
 </div><br>
-	<div class="message-container"><img style="margin-right: 20px;" src="https://assets.meower.org/PFP/21.png"><h2 style="margin-top: -130px; margin-left: 100px;">user<br>
-<span style="font-size: 18px; color: #989898; font-weight: 100;">MM/DD/YYYY</span></h2><br><br> <p style="margin-top: -25px;">message-body</p>
-</div><br>
-
-<button2>Stop Message Reminders</button2><br>
-<br><br>
-
-<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
-<br>
-Stop Message Reminders: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
