--- a/misc/email/announcement.html
+++ b/misc/email/announcement.html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 50px 10px 50px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 30px 10px 30px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,20 +57,19 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Age Change Request&nbsp;</h2>
-    <p>Dear [user],<br><br>
-      Your child has requested an age change from [current age] to [new age].<br>
-      <br>
-      You can use this email to allow or block this change.&nbsp; &nbsp;<br>
-&nbsp;&nbsp;
-      &nbsp; &nbsp; <br>
+	<h2>Meower Announcement Title&nbsp;</h2>
+    <p> Announcement Content<br><br>
+
+<span style="font-size: 15px;"><em>To unsubscribe from announcments like this, use the button below.</em></span>
 <br>
-<button1>Change Age</button1><button2>Block Age Change</button2> <br>
+<br>
+<br>
+<button class="button1">Unsubscribe</button><br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Change Age: https://meower.org/...<br>Block Age Change: https://meower.org/...</em></span><br>
+Unsubscribe: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
