--- a/misc/email/automatedresponse(support@meower.org).html
+++ b/misc/email/automatedresponse(support@meower.org).html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 50px 10px 50px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 20px 10px 20px;
+		padding: 10px 30px 10px 30px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,18 +57,11 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Verify your Email</h2>
-    <p>Dear [user],<br><br> Someone named [user] (likely you) tried to create an account on Meower.<br>
-<br>
-To verify this email, press the button below. <br>
-<br>
-<button1>Verify</button1> <button2>This wasn't me!</button2>
-<br><br>
-
-<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
-<br>
-Verify: https://meower.org/...<br>
-This isn't me!: https://meower.org/...</em></span><br>
+	<h2>Thank you!</h2>
+    <p>Dear [user],<br><br>
+      We've recieved your email to support@meower.org and a member of our team will be responding shortly.<br>
+      <br>
+      <em>This is an automated message. If we don't send back in 1-2 months, please send another email.</em>&nbsp; &nbsp;&nbsp;<br>
 <br>
 
 - Meower Media Co.</p>
