--- a/misc/email/AA-emailtemplate.html
+++ b/misc/email/AA-emailtemplate.html
@@ -41,7 +41,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -52,10 +52,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 50px 10px 50px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -68,15 +68,19 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Alert</h2>
-    <p>Dear [user],<br><br>
-      Your account has received an alert from the Meower Moderation Team.<br>
-      <br>
-      The alert reads as follows:<div class="message-container">
-Alert sent on: MM/DD/YYYY<br>
-<br>
-[alert]
+	<h2>Header&nbsp;</h2>
+    <p> Body text&nbsp;
+    <div class="message-container"> This is a message container
 </div><br>
+	<br>
+
+<button class="button1">button1</button><button class="button2">button2</button><br>
+<br><br>
+
+<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
+<br>
+button1: https://meower.org/...<br>
+button2: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
