--- a/misc/email/accountlinkrequest.html
+++ b/misc/email/accountlinkrequest.html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 50px 10px 50px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 20px 10px 20px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,22 +57,25 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Account Link Notice&nbsp;</h2>
+	<h2>Account Link Request</h2>
     <p>Dear [user],<br><br>
-      All Child Meower accounts have to be linked to an Adult account.<br>
+      A Child account named "[child]" has requested to be linked to your Adult account.&nbsp; &nbsp;<br>
       <br>
-      During setup, you have decided to skip the account link.&nbsp;&nbsp;      <br>
+      To link your Adult account to [child], you are required to give [child]'s account credentials for verification .&nbsp; &nbsp; &nbsp; &nbsp; <br>
       <br>
-      If the account "[user]" is not linked to an Adult account within the next 30 days, the account will have to be terminated as per COPPA law.&nbsp; &nbsp;<br>
-&nbsp;&nbsp;
-      &nbsp; &nbsp; <br>
+      If you are not the parent/guardian of [child], please press the "Don't Link" button below.&nbsp; &nbsp; &nbsp;&nbsp; <br>
+      <br>
+      If you are not a parent at all, press the "Stop Links" button to stop receiving all account link requests.<br>
 <br>
-<button1>Link Now</button1> <br>
+<br>
+<button class="button1">Link Now</button><button class="button2">Don't Link</button><button class="button2">Stop Links</button> <br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Link Now: https://meower.org/...</em></span><br>
+Link Now: https://meower.org/...<br>
+Don't Link: https://meower.org/...<br>
+Stop Links: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
