--- a/misc/email/accountlinksuccesschild.html
+++ b/misc/email/accountlinksuccesschild.html
@@ -18,17 +18,6 @@
 		font-size: 20px;
 		text-align: left 
 	}
-	.message-container {
-		width: 560px;	
-		border-radius: 14px;
-		background-color: #fff;
-		padding: 20px 20px;
-		border: none;
-		font-family: simvoni; 	
-		color: #000;
-		font-size: 20px;
-		text-align: left 
-	}
 	h2 {
 		padding-left: 10px;
 		padding-top: 20px;	
@@ -41,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -52,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 50px 10px 50px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -68,19 +57,19 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Header&nbsp;</h2>
-    <p> Body text&nbsp;
-    <div class="message-container"> This is a message container
-</div><br>
-	<br>
-
-<button1>button1</button1><button2>button2</button2><br>
+	<h2>Account Link Success!</h2>
+    <p>Dear [user],<br><br>
+      Your account has been successfully linked to [adult]!<br>
+      <br>
+      Welcome to the wonderful world of Meower!<br>
+<br>
+<br>
+		<button class="button1">Let's go!</button><br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-button1: https://meower.org/...<br>
-button2: https://meower.org/...</em></span><br>
+Let's go!: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
