--- a/misc/email/agerequest.html
+++ b/misc/email/agerequest.html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 50px 10px 50px;
+		padding: 10px 40px 10px 40px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 30px 10px 30px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,25 +57,20 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Account Link Success!</h2>
+	<h2>Age Change Request&nbsp;</h2>
     <p>Dear [user],<br><br>
-      Your account has been successfully linked to [child]!<br>
+      Your child has requested an age change from [current age] to [new age].<br>
       <br>
-      Your child can now experience the wonderful world of Meower!<br>
-      <br>
-      Your child's parental control settings are currently set at <br>
+      You can use this email to allow or block this change.&nbsp; &nbsp;<br>
+&nbsp;&nbsp;
+      &nbsp; &nbsp; <br>
 <br>
-<strong>Recommended Settings<br>
-<br>
-</strong>If you want, you can customize and control parental controls to your liking. You can change what your child can see, access, as well as set custom profanity filters and age settings.&nbsp;&nbsp;<br>
-<br>
-<br>
-		<button1>Parental Control Settings</button1><br>
+<button class="button1">Change Age</button><button class="button2">Block Age Change</button> <br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Parental Control Settings: https://meower.org/...</em></span><br>
+Change Age: https://meower.org/...<br>Block Age Change: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
