--- a/misc/email/emailchangesend.html
+++ b/misc/email/emailchangesend.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,7 +41,7 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
 		padding: 10px 40px 10px 40px;
@@ -57,25 +57,21 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>IP Ban Notice</h2>
-    <p>Dear [user],<br> 
-      <br>
-The Meower moderator team has decided to permantly terminate your IP Address as they have found the accounts under this IP in violation of Meower's Terms of Service. <br>
-<br>
-Your IP has been terminated for the following reason: <br>
-<br>
-[reason] <br>
-<br>
-You will no longer be able to view Meower. <br>
-<br>
-The following services have been revoked :<br>
-- Using first and third-party OAuth applications<br>
-- Using websites and apps that are partnered with Meower<br>
-- Creating new accounts on Meower<br>
-- Participating in Meower Communites, such as the Meower Discord server. <br>
-<br>
-Please note that attempts to circumvent this will result in more IP bans.&nbsp;&nbsp; <br>
+	<h2>Primary Email Change&nbsp;</h2>
+    <p>Dear [user],<br><br>
+      Your account has requested to change it's primary email from [email] to [new email].<br><br>
 
+Please use the button to send the verification email to [new email]
+<br>
+<br>
+<br>
+		<button class="button1">Change Email</button><button class="button2">This wasn't me!</button><br>
+<br><br>
+
+<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
+<br>
+Change Email: https://meower.org/...<br>
+This wasn't me!: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
