--- a/misc/email/passwordchange.html
+++ b/misc/email/passwordchange.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,7 +41,7 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
 		padding: 10px 40px 10px 40px;
@@ -57,20 +57,21 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Primary Email Change&nbsp;</h2>
+	<h2>Password Change</h2>
     <p>Dear [user],<br><br>
-      A Meower account named [user] (likely you) has requested to change it's primary email to this email address.&nbsp; &nbsp;<br><br>
-
-Please use the button to verify [new email]<br>
+      Your password has just been changed from IP [127.0.0.1]<br>
+      <br>
+      If this was you, you can ignore this email.&nbsp; <br>
+      <br>
+      If this is not you, please request account recovery.&nbsp;&nbsp;<br>
 <br>
 <br>
-		<button1>Verify Email</button1><button2>This wasn't me!</button2><br>
+		<button class="button1">Account Recovery</button><br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Verify Email: https://meower.org/...<br>
-This wasn't me!: https://meower.org/...</em></span><br>
+Account Recovery: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
