--- a/misc/email/recovery.html
+++ b/misc/email/recovery.html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 50px 10px 50px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 20px 10px 20px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,25 +57,33 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Account Link Request</h2>
+	<h2>Your account has been terminated&nbsp;</h2>
     <p>Dear [user],<br><br>
-      A Child account named "[child]" has requested to be linked to your Adult account.&nbsp; &nbsp;<br>
+      The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
       <br>
-      To link your Adult account to [child], you are required to give [child]'s account credentials for verification .&nbsp; &nbsp; &nbsp; &nbsp; <br>
+      Your account has been terminated for the following reason:<br>
       <br>
-      If you are not the parent/guardian of [child], please press the "Don't Link" button below.&nbsp; &nbsp; &nbsp;&nbsp; <br>
-      <br>
-      If you are not a parent at all, press the "Stop Links" button to stop receiving all account link requests.<br>
+      [reason]&nbsp; &nbsp; &nbsp;&nbsp;<br>
+<br>
+You will no longer be able to log into Meower.<br>
+<br>
+The following things may be revoked&nbsp; :<br>
+&nbsp;- Using first and third-party OAuth applications<br>
+&nbsp;- Using websites and apps that are partnered with Meower<br>
+&nbsp;- Creating new accounts on Meower&nbsp; <br>
+&nbsp;- Participating in Meower Communites, such as the Meower Discord server.<br>
+<br>
+Please note that attempts to circumvent this may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
+<br>
+If you believe this was in error, please file an appeal using the button below. You have 30 days to appeal before your account will be purged.<br>
 <br>
 <br>
-<button1>Link Now</button1><button2>Don't Link</button2><button2>Stop Links</button2> <br>
+<button class="button1">Appeal</button> <br>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Link Now: https://meower.org/...<br>
-Don't Link: https://meower.org/...<br>
-Stop Links: https://meower.org/...</em></span><br>
+Appeal: https://meower.org/...<br></em></span><br>
 <br>
 
 - Meower Media Co.</p>
