--- a/misc/email/terminate.html
+++ b/misc/email/terminate.html
@@ -30,10 +30,10 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
-		padding: 10px 40px 10px 40px;
+		padding: 10px 50px 10px 50px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -41,10 +41,10 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
-		padding: 10px 30px 10px 30px;
+		padding: 10px 20px 10px 20px;
 		border: none;
 		font-family: simvoni;
 		font-size: 20px; 	
@@ -57,11 +57,33 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Thank you!</h2>
+	<h2>Your account has been terminated&nbsp;</h2>
     <p>Dear [user],<br><br>
-      We've recieved your email to support@meower.org and a member of our team will be responding shortly.<br>
+      The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
       <br>
-      <em>This is an automated message. If we don't send back in 1-2 months, please send another email.</em>&nbsp; &nbsp;&nbsp;<br>
+      Your account has been terminated for the following reason:<br>
+      <br>
+      [reason]&nbsp; &nbsp; &nbsp;&nbsp;<br>
+<br>
+You will no longer be able to log into Meower.<br>
+<br>
+The following services may be revoked&nbsp; :<br>
+&nbsp;- Using first and third-party OAuth applications<br>
+&nbsp;- Using websites and apps that are partnered with Meower<br>
+&nbsp;- Creating new accounts on Meower&nbsp; <br>
+&nbsp;- Participating in Meower Communites, such as the Meower Discord server.<br>
+<br>
+Please note that attempts to circumvent this may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
+<br>
+If you believe this was in error, please file an appeal using the button below. You have 30 days to appeal before your account will be purged.<br>
+<br>
+<br>
+<button class="button1">Appeal&nbsp;</button> <br>
+<br><br>
+
+<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
+<br>
+Appeal: https://meower.org/...<br></em></span><br>
 <br>
 
 - Meower Media Co.</p>
