--- a/misc/email/verify.html
+++ b/misc/email/verify.html
@@ -30,7 +30,7 @@
 	img {
 		margin-top: 20px; margin-bottom:10px;
 	}
-	button1 {
+	.button1 {
 		border-radius: 14px;
 		background-color: #F9A637;
 		padding: 10px 50px 10px 50px;
@@ -41,7 +41,7 @@
 	    margin-right: 15px;
 		cursor: pointer;
 	}
-	button2 {
+	.button2 {
 		border-radius: 14px;
 		background-color: #fff;
 		padding: 10px 20px 10px 20px;
@@ -57,33 +57,18 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Your account has been terminated&nbsp;</h2>
-    <p>Dear [user],<br><br>
-      The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
-      <br>
-      Your account has been terminated for the following reason:<br>
-      <br>
-      [reason]&nbsp; &nbsp; &nbsp;&nbsp;<br>
+	<h2>Verify your Email</h2>
+    <p>Dear [user],<br><br> Someone named [user] (likely you) tried to create an account on Meower.<br>
 <br>
-You will no longer be able to log into Meower.<br>
+To verify this email, press the button below. <br>
 <br>
-The following services may be revoked&nbsp; :<br>
-&nbsp;- Using first and third-party OAuth applications<br>
-&nbsp;- Using websites and apps that are partnered with Meower<br>
-&nbsp;- Creating new accounts on Meower&nbsp; <br>
-&nbsp;- Participating in Meower Communites, such as the Meower Discord server.<br>
-<br>
-Please note that attempts to circumvent this may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
-<br>
-If you believe this was in error, please file an appeal using the button below. You have 30 days to appeal before your account will be purged.<br>
-<br>
-<br>
-<button1>Appeal&nbsp;</button1> <br>
+<button class="button1">Verify</button> <button class="button2">This wasn't me!</button>
 <br><br>
 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
-Appeal: https://meower.org/...<br></em></span><br>
+Verify: https://meower.org/...<br>
+This isn't me!: https://meower.org/...</em></span><br>
 <br>
 
 - Meower Media Co.</p>
