--- a/misc/email/terminateparent.html
+++ b/misc/email/terminateparent.html
@@ -68,26 +68,26 @@
 
 <body>
 	<center><img height="70px" src="https://meower.org/assets/logo_black.png"></center><center><div class="email-container">
-	<h2>Your account has been terminated&nbsp;</h2>
+	<h2>Your child's account has been terminated&nbsp;</h2>
     <p>Dear [user],<br><br>
-      The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
+      Your child's account has been terminated.<br>
       <br>
-      Your account has been terminated for the following reason:
-	<div class="message-container">
+      Your child's account has been terminated for the following reason:<div class="message-container">
       [reason]&nbsp; &nbsp; &nbsp;&nbsp;</div><br>
 <br>
-You will no longer be able to log into Meower.<br>
+Your child will no longer be able to log into Meower.<br>
 <br>
-The following services may be revoked&nbsp; :<br>
+The following services may be revoked from your child&nbsp; :<br>
 &nbsp;- Using first and third-party OAuth applications<br>
 &nbsp;- Using websites and apps that are partnered with Meower<br>
 &nbsp;- Creating new accounts on Meower&nbsp; <br>
 &nbsp;- Participating in Meower Communites, such as the Meower Discord server.<br>
 <br>
-Please note that attempts to circumvent this may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
+Please note that if your child attempts to circumvent termination, it may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
 <br>
+Please have a talk with your child about this, as breaking TOS is a very serious offense here on Meower. <br><br>
+
 If you believe this was in error, please file an appeal using the button below. You have 30 days to appeal before your account will be purged.<br>
-<br>
 <br>
 <button class="button1">Appeal&nbsp;</button> <br>
 <br><br>
@@ -95,9 +95,8 @@ If you believe this was in error, please file an appeal using the button below. 
 <span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
 <br>
 Appeal: https://meower.org/...<br></em></span><br>
-<br>
-
-- Meower Media Co.</p>
+- Meower Media Co.
+</p>
     </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
