--- a/misc/email/terminatechild.html
+++ b/misc/email/terminatechild.html
@@ -72,8 +72,7 @@
     <p>Dear [user],<br><br>
       The Meower moderator team has decided to permantly terminate your Meower account as they have found your account in violation of Meower's Terms of Service.<br>
       <br>
-      Your account has been terminated for the following reason:
-	<div class="message-container">
+      Your account has been terminated for the following reason:<div class="message-container">
       [reason]&nbsp; &nbsp; &nbsp;&nbsp;</div><br>
 <br>
 You will no longer be able to log into Meower.<br>
@@ -86,18 +85,13 @@ The following services may be revoked&nbsp; :<br>
 <br>
 Please note that attempts to circumvent this may result in a more severe punishment, such as an IP ban, or revoked services (as mentioned above).<br>
 <br>
-If you believe this was in error, please file an appeal using the button below. You have 30 days to appeal before your account will be purged.<br>
-<br>
-<br>
-<button class="button1">Appeal&nbsp;</button> <br>
-<br><br>
+If you believe this was in error, please ask your parent/guardian to file an appeal for you using the email they received. You have 30 days to appeal before your account will be purged.<br>
 
-<span style="font-size: 18px;"><em>Or copy and paste the links in your browser:<br>
-<br>
-Appeal: https://meower.org/...<br></em></span><br>
 <br>
 
-- Meower Media Co.</p>
+- Meower Media Co.<br>
+<br>
+</p>
     </div></center><center><p><a href="https://meower.org/">Meower</a> is a free, open-source, and non-profit social media platform, created by Meower Media Co.<br>
 <br>
 If you have questions about Meower or this email, feel free to contact us at <a href="mailto:support@meower.org">support@meower.org</a><br>
