Fixed something else I changed.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  <h2 style="color:#ff5600;">An original</h2>
       <div class="meower-info">Meower started life as a Scratch 3.0-based social media platform. We have a long history, too! Check out our <a id="scratch" class="link" href="https://wiki.meower.org">wiki</a> for more info!</div>
 	  <h2 style="color:#ff5600;">Freedom to the masses</h2>
-      <div class="meower-info">Everyone is welcome to use Meower. We don't use censorship, political agendas, and we don't care about money. Meower is just a place to hang out, nothing more, nothing less.</div>
+      <div class="meower-info">Everyone is welcome to use Meower. We don't have censorship, political agendas, and we don't care about money. Meower is just a place to hang out, nothing more, nothing less.</div>
 	  <h2 style="color:#ff5600;">Simple and elegant</h2>
       <div class="meower-info">Meower is designed to be as easy to use. What you see, is what you get.<br> </br></div>
 	  <img src="assets/welcome.png" width="35%" height="35%"> <img src="assets/gui_sample.png" width="35%" height="35%">
